5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4172/executions/1834_1278.log
== TEST (2019-07-01 21:03:17) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array([[0,2,11,6,15,11,1],
		  [2,0,7,12,4,2,15],
		  [11,7,0,11,8,3,13],
		  [6,12,11,0,10,2,1],
		  [15,4,8,10,0,5,13],
		  [11,2,3,2,5,0,14],
		  [1,15,13,1,13,14,0]])

y=int(input("coluna"))
z=int(input("linha"))
w=0
q=(y//100)-1
a=(z//100)-1
while (y!=-1):
	w+=x[a,q]
	y=z
	z=int(input("linha"))
print(w0
-- ERROR:
File "XXXX", line 22
    
            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:03:22) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array([[0,2,11,6,15,11,1],
		  [2,0,7,12,4,2,15],
		  [11,7,0,11,8,3,13],
		  [6,12,11,0,10,2,1],
		  [15,4,8,10,0,5,13],
		  [11,2,3,2,5,0,14],
		  [1,15,13,1,13,14,0]])

y=int(input("coluna"))
z=int(input("linha"))
w=0
q=(y//100)-1
a=(z//100)-1
while (y!=-1):
	w+=x[a,q]
	y=z
	z=int(input("linha"))
print(w)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:04:23) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array([[0,2,11,6,15,11,1],
		  [2,0,7,12,4,2,15],
		  [11,7,0,11,8,3,13],
		  [6,12,11,0,10,2,1],
		  [15,4,8,10,0,5,13],
		  [11,2,3,2,5,0,14],
		  [1,15,13,1,13,14,0]])

y=int(input("coluna"))
z=int(input("linha"))
w=0
q=(y//100)-1
a=(z//100)-1
while (y!=-1):
	w+=x[a,q]
	y=z
	y=int(input("linha"))
print(w)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:04:48) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array([[0,2,11,6,15,11,1],
		  [2,0,7,12,4,2,15],
		  [11,7,0,11,8,3,13],
		  [6,12,11,0,10,2,1],
		  [15,4,8,10,0,5,13],
		  [11,2,3,2,5,0,14],
		  [1,15,13,1,13,14,0]])

y=int(input("coluna"))
z=int(input("linha"))
w=0
q=(y//100)-1
a=(z//100)-1
while (y!=-1):
	w+=x[a,q]
	y=z
	y=int(input("linha"))
print(w)
-- EXECUTION TIME:
1.21987
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
24
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
75
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
14
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:04:55) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array([[0,2,11,6,15,11,1],
		  [2,0,7,12,4,2,15],
		  [11,7,0,11,8,3,13],
		  [6,12,11,0,10,2,1],
		  [15,4,8,10,0,5,13],
		  [11,2,3,2,5,0,14],
		  [1,15,13,1,13,14,0]])

y=int(input("coluna"))
z=int(input("linha"))
w=0
q=(y//100)-1
a=(z//100)-1
while (y!=-1):
	w+=x[a,q]
	y=z
	y=int(input("linha"))
print(w)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:05:21) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array([[0,2,11,6,15,11,1],
		  [2,0,7,12,4,2,15],
		  [11,7,0,11,8,3,13],
		  [6,12,11,0,10,2,1],
		  [15,4,8,10,0,5,13],
		  [11,2,3,2,5,0,14],
		  [1,15,13,1,13,14,0]])

y=int(input("coluna"))
z=int(input("linha"))
w=0
q=(y//100)-1
a=(z//100)-1
while (y!=-1):
	w+=x[a,q]
	y=z
	y=int(input("linha"))
print(w)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:05:49) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array([[0,2,11,6,15,11,1],
		  [2,0,7,12,4,2,15],
		  [11,7,0,11,8,3,13],
		  [6,12,11,0,10,2,1],
		  [15,4,8,10,0,5,13],
		  [11,2,3,2,5,0,14],
		  [1,15,13,1,13,14,0]])

y=int(input("coluna"))
z=int(input("linha"))
w=0
q=(y//100)-1
a=(z//100)-1
while (z!=-1):
	w+=x[a,q]
	y=z
	z=int(input("linha"))
print(w)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:06:15) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array([[0,2,11,6,15,11,1],
		  [2,0,7,12,4,2,15],
		  [11,7,0,11,8,3,13],
		  [6,12,11,0,10,2,1],
		  [15,4,8,10,0,5,13],
		  [11,2,3,2,5,0,14],
		  [1,15,13,1,13,14,0]])

y=int(input("coluna"))
z=int(input("linha"))
w=0
q=(y//100)-1
a=(z//100)-1
while (z!=-1):
	w+=x[q,a]
	y=z
	z=int(input("linha"))
print(w)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:07:19) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array([[0,2,11,6,15,11,1],
		  [2,0,7,12,4,2,15],
		  [11,7,0,11,8,3,13],
		  [6,12,11,0,10,2,1],
		  [15,4,8,10,0,5,13],
		  [11,2,3,2,5,0,14],
		  [1,15,13,1,13,14,0]])

y=int(input("coluna"))
z=int(input("linha"))
w=0
q=(y//100)-1
a=(z//100)-1
while (y!=-1):
	w+=x[a,q]
	
	z=int(input("linha"))
print(w)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:07:40) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array([[0,2,11,6,15,11,1],
		  [2,0,7,12,4,2,15],
		  [11,7,0,11,8,3,13],
		  [6,12,11,0,10,2,1],
		  [15,4,8,10,0,5,13],
		  [11,2,3,2,5,0,14],
		  [1,15,13,1,13,14,0]])

y=int(input("coluna"))
z=int(input("linha"))
w=0
q=(y//100)-1
a=(z//100)-1
while (y!=-1):
	w+=x[a,q]
	
	y=int(input("linha"))
print(w)
-- EXECUTION TIME:
0.943446
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
24
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
75
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
14
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:09:02) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array([[0,2,11,6,15,11,1],
		  [2,0,7,12,4,2,15],
		  [11,7,0,11,8,3,13],
		  [6,12,11,0,10,2,1],
		  [15,4,8,10,0,5,13],
		  [11,2,3,2,5,0,14],
		  [1,15,13,1,13,14,0]])

y=int(input("coluna"))
z=int(input("linha"))
w=0
q=(y//100)-1
a=(z//100)-1
while (y!=-1):
	y+=x[q,a]
	
	y=int(input("linha"))
print(w)
-- EXECUTION TIME:
1.22106
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
0
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
colunalinhalinhalinhalinhalinhalinha0
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
colunalinhalinhalinhalinhalinhalinhalinhalinha0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:09:03) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array([[0,2,11,6,15,11,1],
		  [2,0,7,12,4,2,15],
		  [11,7,0,11,8,3,13],
		  [6,12,11,0,10,2,1],
		  [15,4,8,10,0,5,13],
		  [11,2,3,2,5,0,14],
		  [1,15,13,1,13,14,0]])

y=int(input("coluna"))
z=int(input("linha"))
w=0
q=(y//100)-1
a=(z//100)-1
while (y!=-1):
	y+=x[q,a]
	
	y=int(input("linha"))
print(w)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:09:25) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array([[0,2,11,6,15,11,1],
		  [2,0,7,12,4,2,15],
		  [11,7,0,11,8,3,13],
		  [6,12,11,0,10,2,1],
		  [15,4,8,10,0,5,13],
		  [11,2,3,2,5,0,14],
		  [1,15,13,1,13,14,0]])

y=int(input("coluna"))
z=int(input("linha"))
w=0
q=(y//100)-1
a=(z//100)-1
while (y!=-1):
	y+=x[a,q]
	
	y=int(input("linha"))
print(w)
-- EXECUTION TIME:
0.982415
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
0
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
0
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:09:29) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array([[0,2,11,6,15,11,1],
		  [2,0,7,12,4,2,15],
		  [11,7,0,11,8,3,13],
		  [6,12,11,0,10,2,1],
		  [15,4,8,10,0,5,13],
		  [11,2,3,2,5,0,14],
		  [1,15,13,1,13,14,0]])

y=int(input("coluna"))
z=int(input("linha"))
w=0
q=(y//100)-1
a=(z//100)-1
while (y!=-1):
	y+=x[a,q]
	
	y=int(input("linha"))
print(w)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:09:56) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array([[0,2,11,6,15,11,1],
		  [2,0,7,12,4,2,15],
		  [11,7,0,11,8,3,13],
		  [6,12,11,0,10,2,1],
		  [15,4,8,10,0,5,13],
		  [11,2,3,2,5,0,14],
		  [1,15,13,1,13,14,0]])

y=int(input("coluna"))
z=int(input("linha"))
w=0
q=(y//100)-1
a=(z//100)-1
while (y!=-1):
	y+=x[a,q]
	z=y
	
	y=int(input("linha"))
print(w)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:10:20) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array([[0,2,11,6,15,11,1],
		  [2,0,7,12,4,2,15],
		  [11,7,0,11,8,3,13],
		  [6,12,11,0,10,2,1],
		  [15,4,8,10,0,5,13],
		  [11,2,3,2,5,0,14],
		  [1,15,13,1,13,14,0]])

y=int(input("coluna"))
z=int(input("linha"))
w=0
q=(y//100)-1
a=(z//100)-1
while (y!=-1):
	w+=x[a,q]
	z=y
	y=int(input("linha"))
print(w)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:10:43) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array([[0,2,11,6,15,11,1],
		  [2,0,7,12,4,2,15],
		  [11,7,0,11,8,3,13],
		  [6,12,11,0,10,2,1],
		  [15,4,8,10,0,5,13],
		  [11,2,3,2,5,0,14],
		  [1,15,13,1,13,14,0]])

y=int(input("coluna"))
z=int(input("linha"))
w=0
q=(y//100)-1
a=(z//100)-1
while (y!=-1):
	w+=x[a,q]
	z=y
	y=int(input("linha"))
print(w)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:11:44) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array([[0,2,11,6,15,11,1],
		  [2,0,7,12,4,2,15],
		  [11,7,0,11,8,3,13],
		  [6,12,11,0,10,2,1],
		  [15,4,8,10,0,5,13],
		  [11,2,3,2,5,0,14],
		  [1,15,13,1,13,14,0]])

y=int(input("coluna"))
z=int(input("linha"))
w=0
q=(y//100)-1
a=(z//100)-1
while (z!=-1):
	w+=x[a,q]
	z=y
	y=int(input("linha"))
print(w)
-- EXECUTION TIME:
0.9819
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1278/main.py", line 20, in <module>
    y=int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:12:02) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array([[0,2,11,6,15,11,1],
		  [2,0,7,12,4,2,15],
		  [11,7,0,11,8,3,13],
		  [6,12,11,0,10,2,1],
		  [15,4,8,10,0,5,13],
		  [11,2,3,2,5,0,14],
		  [1,15,13,1,13,14,0]])

y=int(input("coluna"))
z=int(input("linha"))
w=0
q=(y//100)-1
a=(z//100)-1
while (z!=-1):
	w+=x[a,q]
	z=y
	y=int(input("linha"))
print(w)
-- EXECUTION TIME:
1.72076
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1278/main.py", line 20, in <module>
    y=int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:12:03) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array([[0,2,11,6,15,11,1],
		  [2,0,7,12,4,2,15],
		  [11,7,0,11,8,3,13],
		  [6,12,11,0,10,2,1],
		  [15,4,8,10,0,5,13],
		  [11,2,3,2,5,0,14],
		  [1,15,13,1,13,14,0]])

y=int(input("coluna"))
z=int(input("linha"))
w=0
q=(y//100)-1
a=(z//100)-1
while (z!=-1):
	w+=x[a,q]
	z=y
	y=int(input("linha"))
print(w)
-- EXECUTION TIME:
1.4778
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1278/main.py", line 20, in <module>
    y=int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:12:04) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array([[0,2,11,6,15,11,1],
		  [2,0,7,12,4,2,15],
		  [11,7,0,11,8,3,13],
		  [6,12,11,0,10,2,1],
		  [15,4,8,10,0,5,13],
		  [11,2,3,2,5,0,14],
		  [1,15,13,1,13,14,0]])

y=int(input("coluna"))
z=int(input("linha"))
w=0
q=(y//100)-1
a=(z//100)-1
while (z!=-1):
	w+=x[a,q]
	z=y
	y=int(input("linha"))
print(w)
-- EXECUTION TIME:
2.95063
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1278/main.py", line 20, in <module>
    y=int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:12:05) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array([[0,2,11,6,15,11,1],
		  [2,0,7,12,4,2,15],
		  [11,7,0,11,8,3,13],
		  [6,12,11,0,10,2,1],
		  [15,4,8,10,0,5,13],
		  [11,2,3,2,5,0,14],
		  [1,15,13,1,13,14,0]])

y=int(input("coluna"))
z=int(input("linha"))
w=0
q=(y//100)-1
a=(z//100)-1
while (z!=-1):
	w+=x[a,q]
	z=y
	y=int(input("linha"))
print(w)
-- EXECUTION TIME:
5.18212
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1278/main.py", line 20, in <module>
    y=int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:12:06) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array([[0,2,11,6,15,11,1],
		  [2,0,7,12,4,2,15],
		  [11,7,0,11,8,3,13],
		  [6,12,11,0,10,2,1],
		  [15,4,8,10,0,5,13],
		  [11,2,3,2,5,0,14],
		  [1,15,13,1,13,14,0]])

y=int(input("coluna"))
z=int(input("linha"))
w=0
q=(y//100)-1
a=(z//100)-1
while (z!=-1):
	w+=x[a,q]
	z=y
	y=int(input("linha"))
print(w)
-- EXECUTION TIME:
7.29601
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1278/main.py", line 20, in <module>
    y=int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:12:07) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array([[0,2,11,6,15,11,1],
		  [2,0,7,12,4,2,15],
		  [11,7,0,11,8,3,13],
		  [6,12,11,0,10,2,1],
		  [15,4,8,10,0,5,13],
		  [11,2,3,2,5,0,14],
		  [1,15,13,1,13,14,0]])

y=int(input("coluna"))
z=int(input("linha"))
w=0
q=(y//100)-1
a=(z//100)-1
while (z!=-1):
	w+=x[a,q]
	z=y
	y=int(input("linha"))
print(w)
-- EXECUTION TIME:
9.35793
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1278/main.py", line 20, in <module>
    y=int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:12:20) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array([[0,2,11,6,15,11,1],
		  [2,0,7,12,4,2,15],
		  [11,7,0,11,8,3,13],
		  [6,12,11,0,10,2,1],
		  [15,4,8,10,0,5,13],
		  [11,2,3,2,5,0,14],
		  [1,15,13,1,13,14,0]])

y=int(input("coluna"))
z=int(input("linha"))
w=0
q=(y//100)-1
a=(z//100)-1
while (z!=-1):
	w+=x[a,q]
	z=y
	z=int(input("linha"))
print(w)
-- EXECUTION TIME:
4.87539
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
24
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
75
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
14
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:12:21) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array([[0,2,11,6,15,11,1],
		  [2,0,7,12,4,2,15],
		  [11,7,0,11,8,3,13],
		  [6,12,11,0,10,2,1],
		  [15,4,8,10,0,5,13],
		  [11,2,3,2,5,0,14],
		  [1,15,13,1,13,14,0]])

y=int(input("coluna"))
z=int(input("linha"))
w=0
q=(y//100)-1
a=(z//100)-1
while (z!=-1):
	w+=x[a,q]
	z=y
	z=int(input("linha"))
print(w)
-- EXECUTION TIME:
5.6841
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
24
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
75
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
14
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:12:21) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array([[0,2,11,6,15,11,1],
		  [2,0,7,12,4,2,15],
		  [11,7,0,11,8,3,13],
		  [6,12,11,0,10,2,1],
		  [15,4,8,10,0,5,13],
		  [11,2,3,2,5,0,14],
		  [1,15,13,1,13,14,0]])

y=int(input("coluna"))
z=int(input("linha"))
w=0
q=(y//100)-1
a=(z//100)-1
while (z!=-1):
	w+=x[a,q]
	z=y
	z=int(input("linha"))
print(w)
-- EXECUTION TIME:
5.6188
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
24
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
75
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
14
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:12:21) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array([[0,2,11,6,15,11,1],
		  [2,0,7,12,4,2,15],
		  [11,7,0,11,8,3,13],
		  [6,12,11,0,10,2,1],
		  [15,4,8,10,0,5,13],
		  [11,2,3,2,5,0,14],
		  [1,15,13,1,13,14,0]])

y=int(input("coluna"))
z=int(input("linha"))
w=0
q=(y//100)-1
a=(z//100)-1
while (z!=-1):
	w+=x[a,q]
	z=y
	z=int(input("linha"))
print(w)
-- EXECUTION TIME:
5.69686
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
24
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
75
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
14
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:12:21) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array([[0,2,11,6,15,11,1],
		  [2,0,7,12,4,2,15],
		  [11,7,0,11,8,3,13],
		  [6,12,11,0,10,2,1],
		  [15,4,8,10,0,5,13],
		  [11,2,3,2,5,0,14],
		  [1,15,13,1,13,14,0]])

y=int(input("coluna"))
z=int(input("linha"))
w=0
q=(y//100)-1
a=(z//100)-1
while (z!=-1):
	w+=x[a,q]
	z=y
	z=int(input("linha"))
print(w)
-- EXECUTION TIME:
5.62629
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
24
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
75
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
14
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:12:21) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array([[0,2,11,6,15,11,1],
		  [2,0,7,12,4,2,15],
		  [11,7,0,11,8,3,13],
		  [6,12,11,0,10,2,1],
		  [15,4,8,10,0,5,13],
		  [11,2,3,2,5,0,14],
		  [1,15,13,1,13,14,0]])

y=int(input("coluna"))
z=int(input("linha"))
w=0
q=(y//100)-1
a=(z//100)-1
while (z!=-1):
	w+=x[a,q]
	z=y
	z=int(input("linha"))
print(w)
-- EXECUTION TIME:
6.24722
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
75
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
14
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:30:14) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array([[0,2,11,6,15,11,1],
		  [2,0,7,12,4,2,15],
		  [11,7,0,11,8,3,13],
		  [6,12,11,0,10,2,1],
		  [15,4,8,10,0,5,13],
		  [11,2,3,2,5,0,14],
		  [1,15,13,1,13,14,0]])

y=int(input("coluna"))
z=int(input("linha"))
w=0
q=(y//100)-1
a=(z//100)-1
while (z!=-1):
	w+=x[a,q]
	
	
	z=int(input("linha"))
print(w)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:32:53) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array([[0,2,11,6,15,11,1],
		  [2,0,7,12,4,2,15],
		  [11,7,0,11,8,3,13],
		  [6,12,11,0,10,2,1],
		  [15,4,8,10,0,5,13],
		  [11,2,3,2,5,0,14],
		  [1,15,13,1,13,14,0]])

y=int(input("coluna"))
z=int(input("linha"))
w=0
q=(y//100)-1
a=(z//100)-1

while (z!=-1):
	w=x[a,q]+w
	z=int(input("linha"))
print(w)
-- EXECUTION TIME:
0.966055
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
24
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
75
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
14
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:56:17) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array([[0,2,11,6,15,11,1],
		  [2,0,7,12,4,2,15],
		  [11,7,0,11,8,3,13],
		  [6,12,11,0,10,2,1],
		  [15,4,8,10,0,5,13],
		  [11,2,3,2,5,0,14],
		  [1,15,13,1,13,14,0]])

y=int(input("coluna"))
z=int(input("linha"))

w=0

q=(y//100)-1
a=(z//100)-1

while (z!=-1):
	w=x[a,q]+w 
	z=y
	z=int(input("linha"))
print(w)
-- EXECUTION TIME:
0.998775
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
24
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
75
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
14
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:56:18) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array([[0,2,11,6,15,11,1],
		  [2,0,7,12,4,2,15],
		  [11,7,0,11,8,3,13],
		  [6,12,11,0,10,2,1],
		  [15,4,8,10,0,5,13],
		  [11,2,3,2,5,0,14],
		  [1,15,13,1,13,14,0]])

y=int(input("coluna"))
z=int(input("linha"))

w=0

q=(y//100)-1
a=(z//100)-1

while (z!=-1):
	w=x[a,q]+w 
	z=y
	z=int(input("linha"))
print(w)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:57:43) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array([[0,2,11,6,15,11,1],
		  [2,0,7,12,4,2,15],
		  [11,7,0,11,8,3,13],
		  [6,12,11,0,10,2,1],
		  [15,4,8,10,0,5,13],
		  [11,2,3,2,5,0,14],
		  [1,15,13,1,13,14,0]])

y=int(input("coluna"))
z=int(input("linha"))

w=0

while (z!=-1):
	w=x[(z//100)-1,(y//100)-1]+w 
	z=y
	z=int(input("linha"))
print(w)
-- EXECUTION TIME:
1.10696
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
colunalinhalinhalinhalinha22
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
colunalinhalinhalinhalinhalinhalinha30
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
colunalinhalinhalinhalinhalinhalinhalinhalinha29
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:57:45) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array([[0,2,11,6,15,11,1],
		  [2,0,7,12,4,2,15],
		  [11,7,0,11,8,3,13],
		  [6,12,11,0,10,2,1],
		  [15,4,8,10,0,5,13],
		  [11,2,3,2,5,0,14],
		  [1,15,13,1,13,14,0]])

y=int(input("coluna"))
z=int(input("linha"))

w=0

while (z!=-1):
	w=x[(z//100)-1,(y//100)-1]+w 
	z=y
	z=int(input("linha"))
print(w)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:58:06) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array([[0,2,11,6,15,11,1],
		  [2,0,7,12,4,2,15],
		  [11,7,0,11,8,3,13],
		  [6,12,11,0,10,2,1],
		  [15,4,8,10,0,5,13],
		  [11,2,3,2,5,0,14],
		  [1,15,13,1,13,14,0]])

y=int(input("coluna"))
z=int(input("linha"))

w=0

while (z!=-1):
	w=x[(z//100)-1,(y//100)-1]+w 
	z=y
	z=int(input("linha"))
print(w)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:58:07) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array([[0,2,11,6,15,11,1],
		  [2,0,7,12,4,2,15],
		  [11,7,0,11,8,3,13],
		  [6,12,11,0,10,2,1],
		  [15,4,8,10,0,5,13],
		  [11,2,3,2,5,0,14],
		  [1,15,13,1,13,14,0]])

y=int(input("coluna"))
z=int(input("linha"))

w=0

while (z!=-1):
	w=x[(z//100)-1,(y//100)-1]+w 
	z=y
	z=int(input("linha"))
print(w)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:58:31) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array([[0,2,11,6,15,11,1],
		  [2,0,7,12,4,2,15],
		  [11,7,0,11,8,3,13],
		  [6,12,11,0,10,2,1],
		  [15,4,8,10,0,5,13],
		  [11,2,3,2,5,0,14],
		  [1,15,13,1,13,14,0]])

y=int(input("coluna"))
z=int(input("linha"))

w=0

while (z!=-1):
	w=x[(y//100)-1,(z//100)-1]+w 
	z=y
	z=int(input("linha"))
print(w)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:59:12) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array([[0,2,11,6,15,11,1],
		  [2,0,7,12,4,2,15],
		  [11,7,0,11,8,3,13],
		  [6,12,11,0,10,2,1],
		  [15,4,8,10,0,5,13],
		  [11,2,3,2,5,0,14],
		  [1,15,13,1,13,14,0]])

y=int(input("coluna"))
z=int(input("linha"))

w=0

while (z!=-1):
	w=x[(y//100)-1,(z//100)-1]+w 
	
	z=int(input("linha"))
print(w)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:59:16) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array([[0,2,11,6,15,11,1],
		  [2,0,7,12,4,2,15],
		  [11,7,0,11,8,3,13],
		  [6,12,11,0,10,2,1],
		  [15,4,8,10,0,5,13],
		  [11,2,3,2,5,0,14],
		  [1,15,13,1,13,14,0]])

y=int(input("coluna"))
z=int(input("linha"))

w=0

while (z!=-1):
	w=x[(y//100)-1,(z//100)-1]+w 
	
	z=int(input("linha"))
print(w)
-- EXECUTION TIME:
0.875808
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
22
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
30
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
29
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:59:28) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array([[0,2,11,6,15,11,1],
		  [2,0,7,12,4,2,15],
		  [11,7,0,11,8,3,13],
		  [6,12,11,0,10,2,1],
		  [15,4,8,10,0,5,13],
		  [11,2,3,2,5,0,14],
		  [1,15,13,1,13,14,0]])

y=int(input("coluna"))
z=int(input("linha"))

w=0

while (z!=-1):
	w=x[(y//100)-1,(z//100)-1]+w 
	y=z
	z=int(input("linha"))
print(w)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:59:45) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array([[0,2,11,6,15,11,1],
		  [2,0,7,12,4,2,15],
		  [11,7,0,11,8,3,13],
		  [6,12,11,0,10,2,1],
		  [15,4,8,10,0,5,13],
		  [11,2,3,2,5,0,14],
		  [1,15,13,1,13,14,0]])

y=int(input("coluna"))
z=int(input("linha"))

w=0

while (z!=-1):
	w=x[(y//100)-1,(z//100)-1]+w 
	y=z
	z=int(input("linha"))
print(w)
-- EXECUTION TIME:
1.09229
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
24
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
50
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
57
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:57:10) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array([[0,2,11,6,15,11,1],
		  [2,0,7,12,4,2,15],
		  [11,7,0,11,8,3,13],
		  [6,12,11,0,10,2,1],
		  [15,4,8,10,0,5,13],
		  [11,2,3,2,5,0,14],
		  [1,15,13,1,13,14,0]])

y=int(input("coluna"))
z=int(input("linha"))

w=0

q=(y//100)-1
p=(z//100)-1

while (z!=-1):
	w=x[q,p]+w 
	y=z
	z=int(input("linha"))
print(w)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:57:42) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array([[0,2,11,6,15,11,1],
		  [2,0,7,12,4,2,15],
		  [11,7,0,11,8,3,13],
		  [6,12,11,0,10,2,1],
		  [15,4,8,10,0,5,13],
		  [11,2,3,2,5,0,14],
		  [1,15,13,1,13,14,0]])

y=int(input("coluna"))
z=int(input("linha"))

w=0

q=(y//100)-1
p=(z//100)-1

while (z!=-1):
	w=x[p,q]+w 
	y=z
	z=int(input("linha"))
print(w)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:57:50) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array([[0,2,11,6,15,11,1],
		  [2,0,7,12,4,2,15],
		  [11,7,0,11,8,3,13],
		  [6,12,11,0,10,2,1],
		  [15,4,8,10,0,5,13],
		  [11,2,3,2,5,0,14],
		  [1,15,13,1,13,14,0]])

y=int(input("coluna"))
z=int(input("linha"))

w=0

q=(y//100)-1
p=(z//100)-1

while (z!=-1):
	w=x[p,q]+w 
	y=z
	z=int(input("linha"))
print(w)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:58:09) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array([[0,2,11,6,15,11,1],
		  [2,0,7,12,4,2,15],
		  [11,7,0,11,8,3,13],
		  [6,12,11,0,10,2,1],
		  [15,4,8,10,0,5,13],
		  [11,2,3,2,5,0,14],
		  [1,15,13,1,13,14,0]])

y=int(input("coluna"))
z=int(input("linha"))

w=0


while (z!=-1):
	w=x[(y//100)-1,(z//100)-1]+w 
	y=z
	z=int(input("linha"))
print(w)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
